# kryptax

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  deploy.yml  release-tauri.yml  tests.yml
e2e/: lot-overview.spec.ts  smoke.spec.ts
src/: App.svelte  app.css  package-lock.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: revolut_x.rs
src/lib/: context.ts
src/lib/components/: ActivitiesTable.svelte  Badge.svelte  Card.svelte  CoinDisambiguator.svelte  CsvImporter.svelte  CsvPriceUploader.svelte  DateField.svelte  HoldingsTable.svelte  ImportPage.svelte  ImportStatus.svelte  LandingPage.svelte  LiveImporter.svelte  LiveSourceCard.svelte  MissingPricesModal.svelte  Modal.svelte  PreprocessorReview.svelte  ResultsPage.svelte  SimulationPanel.svelte  Table.svelte  TaxEventsTable.svelte  TestResultsPage.svelte  valueColor.ts
src/lib/converters/: csv-prices.test.ts  csv-prices.ts  fiat-currencies.ts  mock-crypto-to-fiat.ts  price-csv-parser.ts
src/lib/engine/: asset-priority.test.ts  asset-priority.ts  enrich-fiat-values.test.ts  enrich-fiat-values.ts  event-processor.test.ts  event-processor.ts  lot-tracker.test.ts  lot-tracker.ts  missing-prices.test.ts  missing-prices.ts  tax-calculator.test.ts  tax-calculator.ts  tax-math.test.ts
src/lib/importers/: binance.test.ts  binance.ts  ledger.test.ts  revolut-x.test.ts  revolut-x.ts
src/lib/preprocessors/: reclassify-inbound-as-buys.test.ts
src/lib/rules/: dk-2024.json  index.test.ts  index.ts
(+16 files in other folders)
